[fix] separate jobs for each action

--- a/.github/workflows/plugin-ci.yaml
+++ b/.github/workflows/plugin-ci.yaml
@@ -26,9 +26,8 @@ permissions:
   contents: read
 
 jobs:
-  continuous-integration:
+  lint:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repo
         uses: actions/checkout@755da8c3cf115ac066823e79a1e1788f8940201b # v3.2.0
@@ -47,8 +46,42 @@ jobs:
       - name: ci/lint
         uses: spirosoik/actions/plugin-ci/lint@main
 
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@755da8c3cf115ac066823e79a1e1788f8940201b # v3.2.0
+        with:
+          fetch-depth: 0
+
+      - name: Setup Go
+        uses: actions/setup-go@6edd4406fa81c3da01a34fa6f6343087c207a568 # v3.5.0
+        with:
+          go-version: ${{ inputs.golang-version }}
+          cache: true
+
+      - name: ci/setup
+        uses: spirosoik/actions/plugin-ci/setup@main
+
       - name: ci/test
         uses: spirosoik/actions/plugin-ci/test@main
 
-      - name: ci/build
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@755da8c3cf115ac066823e79a1e1788f8940201b # v3.2.0
+        with:
+          fetch-depth: 0
+
+      - name: Setup Go
+        uses: actions/setup-go@6edd4406fa81c3da01a34fa6f6343087c207a568 # v3.5.0
+        with:
+          go-version: ${{ inputs.golang-version }}
+          cache: true
+
+      - name: ci/setup
+        uses: spirosoik/actions/plugin-ci/setup@main
+
+      - name: ci/test
         uses: spirosoik/actions/plugin-ci/build@main
