--- a/.github/workflows/plugin-ci.yml
+++ b/.github/workflows/plugin-ci.yml
@@ -41,10 +41,10 @@ jobs:
           cache: true
 
       - name: ci/setup
-        uses: mattermost/actions/plugin-ci/setup@main
+        uses: mattermost/actions/plugin-ci/setup@c96feabad039c3d01c0a2c46a3e467fbb33e0129
 
       - name: ci/lint
-        uses: mattermost/actions/plugin-ci/lint@main
+        uses: mattermost/actions/plugin-ci/lint@c96feabad039c3d01c0a2c46a3e467fbb33e0129
 
   test:
     runs-on: ubuntu-latest
@@ -61,10 +61,10 @@ jobs:
           cache: true
 
       - name: ci/setup
-        uses: mattermost/actions/plugin-ci/setup@main
+        uses: mattermost/actions/plugin-ci/setup@c96feabad039c3d01c0a2c46a3e467fbb33e0129
 
       - name: ci/test
-        uses: mattermost/actions/plugin-ci/test@main
+        uses: mattermost/actions/plugin-ci/test@c96feabad039c3d01c0a2c46a3e467fbb33e0129
 
   build:
     runs-on: ubuntu-latest
@@ -81,10 +81,10 @@ jobs:
           cache: true
 
       - name: ci/setup
-        uses: mattermost/actions/plugin-ci/setup@main
+        uses: mattermost/actions/plugin-ci/setup@c96feabad039c3d01c0a2c46a3e467fbb33e0129
 
       - name: ci/test
-        uses: mattermost/actions/plugin-ci/build@main
+        uses: mattermost/actions/plugin-ci/build@c96feabad039c3d01c0a2c46a3e467fbb33e0129
 
   delivery:
     runs-on: ubuntu-latest
@@ -99,7 +99,7 @@ jobs:
         run: mv dist/*.tar.gz dist/$GITHUB_REPOSITORY-ci.tar.gz
 
       - name: ci/upload-artifact
-        uses: mattermost/actions/artifact-upload@main
+        uses: mattermost/actions/artifact-upload@c96feabad039c3d01c0a2c46a3e467fbb33e0129
         with:
           artifacts: dist
           bucket: mattermost-plugins-ci/ci/
