--- a/.github/workflows/plugin-ci.yml
+++ b/.github/workflows/plugin-ci.yml
@@ -1,6 +1,20 @@
 on:
   workflow_call:
     inputs:
+      artifacts:
+        default: dist
+        description: |
+          The path or files of artifacts to upload
+        required: false
+        type: string
+
+      bucket:
+        default: mattermost-plugins-ci/ci/
+        description: |
+          The S3 bucket full path to upload
+        required: false
+        type: string
+
       golang-cache-enabled:
         default: true
         description: |
@@ -22,16 +36,11 @@ on:
         required: false
         type: string
 
-      artifacts:
+      region:
+        default: us-east-2
         description: |
-          The path or files of artifacts to upload
-        required: true
-        type: string
-
-      bucket:
-        description: |
-          The S3 bucket full path to upload
-        required: true
+          The AWS region for S3 bucket
+        required: false
         type: string
 
 permissions:
@@ -80,6 +89,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    needs: [lint, test]
     steps:
       - name: Checkout repo
         uses: actions/checkout@755da8c3cf115ac066823e79a1e1788f8940201b # v3.2.0
@@ -100,6 +110,7 @@ jobs:
 
   delivery:
     runs-on: ubuntu-latest
+    needs: [build]
     steps:
       - name: ci/download-artifact
         uses: actions/download-artifact@9782bd6a9848b53b110e712e20e42d89988822b7 # v3.0.1
