--- a/.github/workflows/plugin-ci.yml
+++ b/.github/workflows/plugin-ci.yml
@@ -56,16 +56,16 @@ jobs:
           fetch-depth: 0
 
       - name: Setup Go
-        uses: actions/setup-go@0143519cc3e3a31bd1a9d4b6a50d23a023b950db # v3.5.0
+        uses: actions/setup-go@6edd4406fa81c3da01a34fa6f6343087c207a568 # v3.5.0
         with:
           go-version: ${{ inputs.golang-version }}
           cache: true
 
       - name: ci/setup
-        uses: mattermost/actions/plugin-ci/setup@78a7031b0c913d2da6db285945e3ddcec191eead
+        uses: mattermost/actions/plugin-ci/setup@847dc3e0a995ab72708b8ef3e49b30bd1bbe2dfc
 
       - name: ci/lint
-        uses: mattermost/actions/plugin-ci/lint@78a7031b0c913d2da6db285945e3ddcec191eead
+        uses: mattermost/actions/plugin-ci/lint@847dc3e0a995ab72708b8ef3e49b30bd1bbe2dfc
 
   test:
     runs-on: ubuntu-latest
@@ -76,16 +76,16 @@ jobs:
           fetch-depth: 0
 
       - name: Setup Go
-        uses: actions/setup-go@0143519cc3e3a31bd1a9d4b6a50d23a023b950db # v3.5.0
+        uses: actions/setup-go@6edd4406fa81c3da01a34fa6f6343087c207a568 # v3.5.0
         with:
           go-version: ${{ inputs.golang-version }}
           cache: true
 
       - name: ci/setup
-        uses: mattermost/actions/plugin-ci/setup@78a7031b0c913d2da6db285945e3ddcec191eead
+        uses: mattermost/actions/plugin-ci/setup@847dc3e0a995ab72708b8ef3e49b30bd1bbe2dfc
 
       - name: ci/test
-        uses: mattermost/actions/plugin-ci/test@78a7031b0c913d2da6db285945e3ddcec191eead
+        uses: mattermost/actions/plugin-ci/test@847dc3e0a995ab72708b8ef3e49b30bd1bbe2dfc
 
   build:
     runs-on: ubuntu-latest
@@ -97,16 +97,16 @@ jobs:
           fetch-depth: 0
 
       - name: Setup Go
-        uses: actions/setup-go@0143519cc3e3a31bd1a9d4b6a50d23a023b950db # v3.5.0
+        uses: actions/setup-go@6edd4406fa81c3da01a34fa6f6343087c207a568 # v3.5.0
         with:
           go-version: ${{ inputs.golang-version }}
           cache: true
 
       - name: ci/setup
-        uses: mattermost/actions/plugin-ci/setup@78a7031b0c913d2da6db285945e3ddcec191eead
+        uses: mattermost/actions/plugin-ci/setup@847dc3e0a995ab72708b8ef3e49b30bd1bbe2dfc
 
       - name: ci/build
-        uses: mattermost/actions/plugin-ci/build@0143519cc3e3a31bd1a9d4b6a50d23a023b950db
+        uses: mattermost/actions/plugin-ci/build@847dc3e0a995ab72708b8ef3e49b30bd1bbe2dfc
 
   delivery:
     # if: ${{ github.ref_name  == 'master' }}
@@ -119,13 +119,18 @@ jobs:
           name: dist
           path: dist
 
+      - name: LS
+        run: ls -al
+        working-directory: dist
+
       - name: ci/prepare-artifact
-        run: mv dist/*.tar.gz dist/$GITHUB_REPOSITORY-ci.tar.gz
+        run: mv *.tar.gz ${GITHUB_REPOSITORY#*/}-ci.tar.gz
+        working-directory: dist
 
       - name: ci/aws-configure
         uses: aws-actions/configure-aws-credentials@67fbcbb121271f7775d2e7715933280b06314838 # v1.7.0
         with:
-          aws-region: ${{ inputs.aws-region }}
+          aws-region: ${{ inputs.region }}
           aws-access-key-id: ${{ secrets.PLUGIN_AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.PLUGIN_AWS_SECRET_ACCESS_KEY }}
 
@@ -133,3 +138,4 @@ jobs:
         shell: bash
         run: |
           aws s3 cp ${{ inputs.artifacts }} s3://${{ inputs.bucket }} --acl public-read --cache-control no-cache
+        working-directory: dist
