--- a/.github/workflows/plugin-ci.yml
+++ b/.github/workflows/plugin-ci.yml
@@ -1,6 +1,20 @@
 on:
   workflow_call:
     inputs:
+      artifacts:
+        default: dist/*.tar.gz
+        description: |
+          The path or files of artifacts to upload
+        required: false
+        type: string
+
+      bucket:
+        default: mattermost-plugins-ci/ci/
+        description: |
+          The S3 bucket full path to upload
+        required: false
+        type: string
+
       golang-cache-enabled:
         default: true
         description: |
@@ -22,6 +36,23 @@ on:
         required: false
         type: string
 
+      region:
+        default: us-east-2
+        description: |
+          The AWS region for S3 bucket
+        required: false
+        type: string
+
+    secrets:
+      aws-access-key-id:
+        description: |
+          The AWS access key ID
+        required: true
+      aws-secret-access-key:
+        description: |
+          The AWS access secret key
+        required: true
+
 permissions:
   contents: read
 
@@ -41,10 +72,10 @@ jobs:
           cache: true
 
       - name: ci/setup
-        uses: mattermost/actions/plugin-ci/setup@a137067c750390bfc228375dbe745b2aa3a566e8
+        uses: mattermost/actions/plugin-ci/setup@f5602943fd346a526f5aceb7d51c6553657a4da1
 
       - name: ci/lint
-        uses: mattermost/actions/plugin-ci/lint@a137067c750390bfc228375dbe745b2aa3a566e8
+        uses: mattermost/actions/plugin-ci/lint@f5602943fd346a526f5aceb7d51c6553657a4da1
 
   test:
     runs-on: ubuntu-latest
@@ -61,13 +92,14 @@ jobs:
           cache: true
 
       - name: ci/setup
-        uses: mattermost/actions/plugin-ci/setup@a137067c750390bfc228375dbe745b2aa3a566e8
+        uses: mattermost/actions/plugin-ci/setup@f5602943fd346a526f5aceb7d51c6553657a4da1
 
       - name: ci/test
-        uses: mattermost/actions/plugin-ci/test@a137067c750390bfc228375dbe745b2aa3a566e8
+        uses: mattermost/actions/plugin-ci/test@f5602943fd346a526f5aceb7d51c6553657a4da1
 
   build:
     runs-on: ubuntu-latest
+    needs: [lint, test]
     steps:
       - name: Checkout repo
         uses: actions/checkout@755da8c3cf115ac066823e79a1e1788f8940201b # v3.2.0
@@ -81,13 +113,15 @@ jobs:
           cache: true
 
       - name: ci/setup
-        uses: mattermost/actions/plugin-ci/setup@a137067c750390bfc228375dbe745b2aa3a566e8
+        uses: mattermost/actions/plugin-ci/setup@f5602943fd346a526f5aceb7d51c6553657a4da1
 
       - name: ci/build
-        uses: mattermost/actions/plugin-ci/build@a137067c750390bfc228375dbe745b2aa3a566e8
+        uses: mattermost/actions/plugin-ci/build@f5602943fd346a526f5aceb7d51c6553657a4da1
 
   delivery:
+    if: ${{ github.ref_name  == 'master' || github.ref_name  == 'main' }}
     runs-on: ubuntu-latest
+    needs: [build]
     steps:
       - name: ci/download-artifact
         uses: actions/download-artifact@9782bd6a9848b53b110e712e20e42d89988822b7 # v3.0.1
@@ -96,11 +130,18 @@ jobs:
           path: dist
 
       - name: ci/prepare-artifact
-        run: mv dist/*.tar.gz dist/$GITHUB_REPOSITORY-ci.tar.gz
+        run: mv *.tar.gz ${GITHUB_REPOSITORY#*/}-ci.tar.gz
+        working-directory: dist
 
-      - name: ci/upload-artifact
-        uses: mattermost/actions/artifact-upload@a137067c750390bfc228375dbe745b2aa3a566e8
+      - name: ci/aws-configure
+        uses: aws-actions/configure-aws-credentials@67fbcbb121271f7775d2e7715933280b06314838 # v1.7.0
         with:
-          artifacts: dist
-          bucket: mattermost-plugins-ci/ci/
-          region: us-east-2
+          aws-region: ${{ inputs.region }}
+          aws-access-key-id: ${{ secrets.aws-access-key-id }}
+          aws-secret-access-key: ${{ secrets.aws-secret-access-key }}
+
+      - name: ci/artifact-upload
+        shell: bash
+        run: |
+          aws s3 cp ${{ inputs.artifacts }} s3://${{ inputs.bucket }} --acl public-read --cache-control no-cache
+        working-directory: dist
