--- a/.github/workflows/plugin-ci.yml
+++ b/.github/workflows/plugin-ci.yml
@@ -43,16 +43,6 @@ on:
         required: false
         type: string
 
-    secrets:
-      aws-access-key-id:
-        description: |
-          The AWS access key ID
-        required: true
-      aws-secret-access-key:
-        description: |
-          The AWS access secret key
-        required: true
-
 permissions:
   contents: read
 
@@ -137,8 +127,8 @@ jobs:
         uses: aws-actions/configure-aws-credentials@67fbcbb121271f7775d2e7715933280b06314838 # v1.7.0
         with:
           aws-region: ${{ inputs.region }}
-          aws-access-key-id: ${{ secrets.aws-access-key-id }}
-          aws-secret-access-key: ${{ secrets.aws-secret-access-key }}
+          aws-access-key-id: ${{ secrets.PLUGIN_AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.PLUGIN_AWS_SECRET_ACCESS_KEY }}
 
       - name: ci/artifact-upload
         shell: bash
