--- a/.github/workflows/plugin-ci.yml
+++ b/.github/workflows/plugin-ci.yml
@@ -77,7 +77,7 @@ jobs:
         uses: mattermost/actions/plugin-ci/build@0d1a5aa0352d9030d51dd6f01868351cad80ef0a
 
   delivery:
-    if: ${{ github.ref_name  == 'master' || github.ref_name  == 'main' }}
+    if: ${{ github.event_name != 'schedule' && (github.ref_name  == 'master' || github.ref_name  == 'main') }}
     runs-on: ubuntu-latest
     needs: [build]
     steps:
