--- a/.github/workflows/plugin-cd.yml
+++ b/.github/workflows/plugin-cd.yml
@@ -99,7 +99,8 @@ jobs:
       - name: ci/artifact-upload
         shell: bash
         run: |
-          aws s3 cp ${{ inputs.artifacts }} s3://${{ inputs.bucket }} --acl public-read --cache-control no-cache
+          ls -al
+          aws s3 cp "${{ inputs.artifacts }}" s3://${{ inputs.bucket }} --acl public-read --cache-control no-cache
         working-directory: dist
 
       - name: ci/publish-release
