--- a/.github/workflows/plugin-ci.yml
+++ b/.github/workflows/plugin-ci.yml
@@ -63,7 +63,6 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    needs: [lint, test]
     steps:
       - name: Checkout repo
         uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
@@ -79,7 +78,7 @@ jobs:
   delivery:
     if: ${{ github.event_name != 'schedule' && (github.ref_name  == 'master' || github.ref_name  == 'main') }}
     runs-on: ubuntu-latest
-    needs: [build]
+    needs: [lint, test, build]
     steps:
       - name: ci/download-artifact
         uses: actions/download-artifact@9782bd6a9848b53b110e712e20e42d89988822b7 # v3.0.1
