--- a/.github/workflows/plugin-cd.yml
+++ b/.github/workflows/plugin-cd.yml
@@ -74,7 +74,7 @@ jobs:
 
   release-github:
     if: startsWith(github.ref, 'refs/tags/v')
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     needs: [build, release-s3]
     steps:
       - name: ci/download-artifact
