--- a/.github/workflows/plugin-cd.yml
+++ b/.github/workflows/plugin-cd.yml
@@ -41,16 +41,11 @@ jobs:
       - name: ci/build
         uses: mattermost/actions/plugin-ci/build@0d1a5aa0352d9030d51dd6f01868351cad80ef0a
 
-  release:
+  release-s3:
     if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     needs: [build]
     steps:
-      - name: cd/checkout-repository
-        uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
-        with:
-          fetch-depth: "0"
-
       - name: ci/download-artifact
         uses: actions/download-artifact@9782bd6a9848b53b110e712e20e42d89988822b7 # v3.0.1
         with:
@@ -77,6 +72,16 @@ jobs:
           aws s3 cp ${GITHUB_REPOSITORY#*/}-${GITHUB_REF_NAME}.tar.gz s3://${{ inputs.bucket }} --acl public-read --cache-control no-cache
         working-directory: dist
 
+  release-github:
+    if: startsWith(github.ref, 'refs/tags/v')
+    runs-on: ubuntu-22.04
+    needs: [release-s3]
+    steps:
+      - name: ci/download-artifact
+        uses: actions/download-artifact@9782bd6a9848b53b110e712e20e42d89988822b7 # v3.0.1
+        with:
+          name: dist
+          path: dist
       - name: ci/publish-release
         run: |
           gh release create "$GITHUB_REF_NAME" --title "$GITHUB_REF_NAME" --notes-file release-notes.md  *.tar.gz
