--- a/.github/workflows/plugin-ci.yml
+++ b/.github/workflows/plugin-ci.yml
@@ -58,10 +58,10 @@ jobs:
           fetch-depth: 0
 
       - name: ci/setup
-        uses: mattermost/actions/plugin-ci/setup@@4945d55b15d3bef108a7f7d6bd53ae4532616d17
+        uses: mattermost/actions/plugin-ci/setup@4945d55b15d3bef108a7f7d6bd53ae4532616d17
 
       - name: ci/test
-        uses: mattermost/actions/plugin-ci/test@@4945d55b15d3bef108a7f7d6bd53ae4532616d17
+        uses: mattermost/actions/plugin-ci/test@4945d55b15d3bef108a7f7d6bd53ae4532616d17
 
   build:
     runs-on: ubuntu-latest
@@ -72,10 +72,10 @@ jobs:
           fetch-depth: 0
 
       - name: ci/setup
-        uses: mattermost/actions/plugin-ci/setup@@4945d55b15d3bef108a7f7d6bd53ae4532616d17
+        uses: mattermost/actions/plugin-ci/setup@4945d55b15d3bef108a7f7d6bd53ae4532616d17
 
       - name: ci/build
-        uses: mattermost/actions/plugin-ci/build@@4945d55b15d3bef108a7f7d6bd53ae4532616d17
+        uses: mattermost/actions/plugin-ci/build@4945d55b15d3bef108a7f7d6bd53ae4532616d17
 
   delivery:
     if: ${{ github.repository_owner == 'mattermost' && github.event_name != 'schedule' && (github.ref_name  == 'master' || github.ref_name  == 'main') }}
