fix: Use github token for publishing releases

--- a/.github/workflows/community-plugin-cd.yml
+++ b/.github/workflows/community-plugin-cd.yml
@@ -33,5 +33,7 @@ jobs:
 
       - name: ci/publish-release
         working-directory: dist
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           gh release create "$GITHUB_REF_NAME" --title "$GITHUB_REF_NAME" --notes-file release-notes.md  *.tar.gz
