--- a/.github/workflows/plugin-cd.yml
+++ b/.github/workflows/plugin-cd.yml
@@ -29,6 +29,13 @@ on:
         required: false
         type: string
 
+      skip-aws-upload:
+        default: false
+        description: |
+          Skip the AWS upload step
+        required: false
+        type: boolean
+
 permissions:
   contents: read
 
@@ -55,7 +62,7 @@ jobs:
         uses: mattermost/actions/plugin-ci/build@cd879ea9c64cc3e26a75a042d1c5066be28130a6
 
   release-s3:
-    if: startsWith(github.ref, 'refs/tags/v') && github.repository_owner == 'mattermost'
+    if: startsWith(github.ref, 'refs/tags/v') && github.repository_owner == 'mattermost' && !inputs.skip-aws-upload
     runs-on: ubuntu-latest
     needs: [build]
     steps:
@@ -88,7 +95,7 @@ jobs:
   release-github:
     if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-22.04
-    needs: [release-s3]
+    needs: [build]
     steps:
       - name: cd/checkout-repository
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
