--- a/.github/workflows/snyk-sbom.yml
+++ b/.github/workflows/snyk-sbom.yml
@@ -7,7 +7,7 @@ on:
         required: false
         type: boolean
       repo_name:
-        description: 'Name of repo to be used in sbom name ex. sbom-REPONAME-vX.Y.Z.json'
+        description: 'Name of repo to'
         required: true
         type: string
 
@@ -31,7 +31,7 @@ jobs:
 
       - name: sbom/generate-monorepo
         if: ${{ inputs.is_monorepo }}
-        run: snyk sbom --format=cyclonedx1.5+json --all-projects > sbom-${{ inputs.repo_name }}-${{ github.event.release.tag_name }}.json
+        run: snyk sbom --format=cyclonedx1.5+json --all-projects > sbom-${{ inputs.repo_name}}}-${{ github.event.release.tag_name }}.json
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
@@ -44,5 +44,4 @@ jobs:
       - name: sbom/upload
         env:
           GH_TOKEN: ${{ github.token }}
-        run: gh release upload "${{ github.event.release.tag_name }}" sbom-${{ inputs.repo_name }}-${{ github.event.release.tag_name }}.json
-        env:
+        run: gh release upload "${{ github.event.release.tag_name }}" sbom-${{ inputs.repo_name}}}-${{ github.event.release.tag_name }}.json
