--- a/.github/workflows/plugin-ci.yml
+++ b/.github/workflows/plugin-ci.yml
@@ -15,17 +15,17 @@ on:
         required: false
         type: string
 
+      go-version-file:
+        default: go.mod
+        description: |
+          Path to the file that declares the Go version
+        required: false
+        type: string
+
       golangci-lint-version:
         default: "v1.55.2"
         description: |
           Set the version for golangci-lint
-        required: false
-        type: string
-
-      golang-version:
-        default: "1.21"
-        description: |
-          Set the version for golang
         required: false
         type: string
 
@@ -60,8 +60,8 @@ jobs:
       - name: ci/setup
         uses: mattermost/actions/plugin-ci/setup@d5174b860704729f4c14ef8489ae075742bfa08a # v1.0.0
         with:
+          go-version-file: ${{ inputs.go-version-file }}
           golangci-lint-version: ${{ inputs.golangci-lint-version }}
-          golang-version: ${{ inputs.golang-version }}
 
       - name: ci/lint
         uses: mattermost/actions/plugin-ci/lint@d5174b860704729f4c14ef8489ae075742bfa08a # v1.0.0
@@ -78,7 +78,7 @@ jobs:
       - name: ci/setup
         uses: mattermost/actions/plugin-ci/setup@d5174b860704729f4c14ef8489ae075742bfa08a # v1.0.0
         with:
-          golang-version: ${{ inputs.golang-version }}
+          go-version-file: ${{ inputs.go-version-file }}
 
       - name: ci/test
         uses: mattermost/actions/plugin-ci/test@d5174b860704729f4c14ef8489ae075742bfa08a # v1.0.0
@@ -95,7 +95,7 @@ jobs:
       - name: ci/setup
         uses: mattermost/actions/plugin-ci/setup@d5174b860704729f4c14ef8489ae075742bfa08a # v1.0.0
         with:
-          golang-version: ${{ inputs.golang-version }}
+          go-version-file: ${{ inputs.go-version-file }}
 
       - name: ci/build
         uses: mattermost/actions/plugin-ci/build@d5174b860704729f4c14ef8489ae075742bfa08a # v1.0.0
